# goodcoder

gc/: CMakeLists.txt  test.tar
gc/include/: dict_parse.h  dict_pattern_register.h  enum_data.h  private_data.h  private_parse.h  public_parse.h
gc/src/: dict_parse.cpp  dict_pattern_register.cpp  main.cpp  private_data.cpp  private_parse.cpp  public_parse.cpp
